# gaussfit_catalog

./: .gitignore  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
docs/gaussfit_catalog/: index.rst
gaussfit_catalog/: core.py
